--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
     <string name="app_name">Hackathon2019</string>
     <string name="title_activity_maps">Map</string>
+    <string name="mainPageTitle">City of Mount Pearl - Fire Hydrant Snow Clearing</string>
+    <string name="reportButton">Report</string>
+    <string name="hydrantStatus">Fire Hydrant Status</string>
+    <string name="radio1">Needs Clearing</string>
+    <string name="radio2">Cleared it Myself!</string>
+    <string name="noneSelected">No Fire Hydrant Selected!</string>
+    <string name="needsClearing">Help is on the way soon!</string>
+    <string name="youCleared">Thank you for your help!</string>
 </resources>
